[project]
name = "qt-customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.15",
    "langgraph>=1.1.8",
]
